# grid

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN-JSON-COVERAGE.md  DESIGN.md  GUARDRAIL-REDESIGN.md  LESSONS.md  ONBOARDING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: RESULTS-g10.md  RESULTS-g5-model.md  RESULTS-g5-walk.md  RESULTS-g6.md  RESULTS-g6b.md  RESULTS-guidance.md  RESULTS-jsonschemabench-v0.2.0.md  RESULTS-jsonschemabench-v0.2.1.md  RESULTS-jsonschemabench-v0.2.2-full.md  RESULTS-jsonschemabench-v0.2.2.md  RESULTS-jsonschemabench-v0.2.4-full.md  RESULTS-maskbench.md  RESULTS-qwen.md  RESULTS-r.md  RESULTS-serving.md  RESULTS-spider-05b.md  RESULTS-spider-ablations.md  RESULTS-spider-repair.md  RESULTS-spider.md  RESULTS.md  compare_engines.py  g10_replay.py  g5_scale.py  g6_adversarial.py  g6b_prompts.py  grammars.py  guidance_scaling.py  json_schema_to_grid.py  jsonschema_normalize.py  jsonschema_rx.py  maskbench_grid.py  plot_maskbench.py  r_microharness.py  spider_coverage.py  spider_ex.py  vllm_grid_patch.py  vllm_sched_accept.py  vllm_serving_bench.py  vllm_smoke.py  vllm_upstream_is_ready.patch  (+1 more)
bench/upstream/: README.md  grid_engine.py
grammars/: sql_spider.grid  sql_subset.grid  toy_expr.grid
grid/: errors.py  guide.py  processors.py  protocols.py  samplers.py
grid/_reference/: guide.py
grid/_statecharts/: compiled_grammar.yaml  dialect_grammar.yaml  engine.py  logits_processor.yaml  registry_slot.yaml  role_projection.yaml  schema_lexicon.yaml
grid/audit/: log.py
grid/generate/: __init__.py  api.py
grid/grammar/: projection.py  reduction.py  spec.py
grid/jsonschema/: SUPPORT.md  __init__.py  compiler.py  normalize.py  rx.py
grid/lalr/: compile.py  reserve.py  stack.py
grid/lexer/: dfa.py  run.py
grid/mask/: cache.py  producer.py
grid/models/: hf_adapter.py  mock.py  tokenizer_adapter.py  transformers_model.py  vllm_processor.py  vllm_structured.py
grid/policy/: bundle.py  schema.py  semantic.py
grid/serving/: __init__.py  journal.py  prefetch.py  singleflight.py
grid/trie/: build.py  walk.py
grid_core/: Cargo.toml  pyproject.toml
grid_core/src/: lib.rs
tests/: conftest.py
tests/audit/: test_audit.py  test_g10_key_format.py  test_g10_v7.py
tests/generate/: test_e2e.py
tests/grammar/: test_spec.py  test_statecharts.py
tests/guide/: test_differential.py
tests/jsonschema_bridge/: test_compile_e2e.py  test_normalize.py  test_official_suite.py  test_patterns_props.py  test_rx.py
tests/lalr/: test_reserve.py  test_tables.py
tests/lexer/: test_bounded_repetition.py  test_lexer.py  test_scan_last_accept.py
tests/mask/: test_adaptive_encode.py  test_cache.py  test_genn_keys.py  test_kernel_parity.py  test_lexicon_language.py  test_t2_cache.py  test_v7_differential.py  test_v7_encode.py  test_verdict_equivalence.py
(+17 files in other folders)
