[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-guardrail"
version = "0.2.5"
description = "GRID - Grammar-Railed Decoding: grammar-constrained LLM decoding with RBAC grammars and an audit trail"
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["constrained-decoding", "structured-output", "json-schema", "llm", "grammar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "torch",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/evolutionIdGmbH/grid"
Changelog = "https://github.com/evolutionIdGmbH/grid/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",  # reference validator: enum filtering + equivalence tests
    "hypothesis",
    "lark",          # grammar authoring/validation and test oracles ONLY (DESIGN.md §12)
    "ruff",
]
transformers = ["transformers"]

[tool.setuptools.packages.find]
include = ["grid", "grid.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
