[package]
name = "grid_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "grid_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py311", "extension-module"] }
rayon = "1.11"
# kernel v7: in-kernel entry_id = BLAKE2b-128(key_repr || tag || payload),
# byte-identical to hashlib.blake2b(digest_size=16) (tests/mask/test_v7_encode.py)
blake2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
